tests/elab/array_lit/synth_array_lit.snapshot
exit status: 1

stdout = """
def a: Array(?0, 0) = [];
types of expressions:
8..10 = Array(?0, 0)
metavars:
?0 = <unsolved>

def b: Array(Int, 3) = [1, 2, 3];
types of expressions:
21..30 = Array(Int, 3)
22..23 = Int
25..26 = Int
28..29 = Int
"""

stderr = """
error: unable to infer element type of empty array literal
  ┌─ tests/elab/array_lit/synth_array_lit.pion:1:9
  │
1 │ def a = [];
  │         ^^

aborting due to 1 previous error
"""
